<resources>
    <string name="app_name">movie_catalog</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name_movie">Название фильма</string>
    <string name="genre_movie">Жанр фильма</string>

    <string name="kit_name">KIT NAME</string>
    <string name="show_all">Все</string>
    <string name="show_all1">Показать все</string>
    <string name="clear">Очистить все</string>
    <string name="quantity_starred">Всего</string>

    <string name="premieres">Премьеры</string>
    <string name="popular">Популярное</string>
    <string name="top">Top 250</string>
    <string name="serials">Сериалы</string>
    <string name="random1">Подборка 1</string>
    <string name="random2">Подборка 2</string>
    <string name="search_kit">Поиск</string>
    <string name="viewed_kit">Просмотрено</string>
    <string name="bookmark_kit">Вам было интересно</string>

    <string name="card_starred_actor">Актер</string>
    <string name="card_starred_role">Роль</string>
    <string name="card_starred_photo">Фотография актера</string>

    <string name="card_gallery_photo">Фотография кадра</string>

    <string name="poster_small">poster_small</string>
    <string name="poster_big">poster_big</string>
    <string name="logotype">Logotype</string>
    <string name="nameru">Руское название фильма</string>
    <string name="nameen">Английское название фильма</string>
    <string name="poster_yeargenreother">poster_yearGenreOther</string>
    <string name="icon_favorite">icon_favorite</string>
    <string name="icon_bookmark">icon_bookmark</string>
    <string name="icon_viewed">icon_viewed</string>
    <string name="icon_share">icon_share</string>
    <string name="icon_other">icon_other</string>
    <string name="the_film_starred">В фильме снимались</string>
    <string name="descriptions_film">Descriptions film</string>
    <string name="poster_rating_name_ru_film">Rating, name RU film</string>
    <string name="poster_show_logotype_film">Show Logotype film</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_actor">В фильме снимались</string>
    <string name="header_staff">Над фильмом работали</string>
    <string name="header_gallery">Галерея</string>
    <string name="header_similar">Похожие фильмы</string>

    <string name="icon_rating_hint">5.5</string>
    <string name="gallery_tab_hint">Кадры</string>
    <string name="not_data">Нет данных</string>

    <string name="FAN_ART">Фан-арты</string>
    <string name="CONCEPT">Концепт-арты</string>
    <string name="COVER">Обложки</string>
    <string name="POSTER">Постеры</string>
    <string name="PROMO">Промо</string>
    <string name="SCREENSHOT">Скриншоты</string>
    <string name="SHOOTING">Изображения со съемок</string>
    <string name="STILL">Кадры</string>
    <string name="WALLPAPER">Обои</string>
    
    // person page person_filmography_quantity
    <string name="person_best_film">Лучшее</string>
    <string name="person_filmography">Фильмография</string>
    <string name="person_filmography_quantity">фильма</string>
    <string name="person_goto_link">К списку</string>
    <string name="person_job">Профессия</string>
    <string name="person_name">Имя</string>
    <string name="actor">Актер</string>
    <string name="job">Участие</string>
    <string name="seasonSeries">Сезоны и серии</string>

    <string name="first_season">1 сезон, </string>
    <string name="film_info_poster_seasons">сезонов: </string>
    <string name="viewer_seasons_season">сезон</string>
    <string name="episode">серия</string>
    <string name="quantity_series">серий</string>
    <string name="numberSeriaName">Номер серии. Название</string>
    <string name="date">Дата</string>
    <string name="description">Описание</string>

    <string name="ACTOR">Актеры</string>
    <string name="HERSELF">Ведущая</string>
    <string name="HIMSELF">Ведущий</string>
    <string name="PRODUCER">Продюсеры</string>
    <string name="DIRECTOR">Режиссеры</string>
    <string name="WRITER">Сценаристы</string>
    <string name="OPERATOR">Операторы</string>
    <string name="DESIGN">Художники</string>
    <string name="EDITOR">Монтажеры</string>
    <string name="COMPOSER">Композиторы</string>
    <string name="VOICE_DIRECTOR">Звукорежисер</string>
    <string name="HRONO_TITR_MALE">HRONO_TITR_MALE</string>
    <string name="VOICE_MALE">VOICE_MALE</string>
    <string name="VOICE_FEMALE">VOICE_FEMALE</string>
    <string name="HRONO_TITR_FEMALE">HRONO_TITR_FEMALE</string>
    <string name="name_film">Название фильма</string>
    <string name="genre_film">Жанр фильма</string>
    <string name="add_collection">Добавить коллекцию.</string>
    <string name="create_collection">Создать свою коллекцию.</string>
    <string name="dialog_message">Придумайте название для вашей новой коллекции.</string>
    <string name="dialog_title">Title</string>
    <string name="ok">ГОТОВО</string>
    <string name="name_new_collection">Название коллекции</string>
    <string name="want_look">Хочу посмотреть</string>
    <string name="favourite">Любимые</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="this_search">Фильмы, актеры, режисеры</string>
    <string name="films">Фильмы</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="rating">Рейтинг</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="sorting">Сортировка</string>
    <string name="dont_show_viewed">Не показывать просмотренные фильмы</string>
    <string name="popularis">Популярность</string>
    <string name="viewing">Показывать</string>
    <string name="enter_country">Введите название</string>
    <string name="enter_genres">Введите жанр</string>
    <string name="search_from">Искать в период с</string>
    <string name="search_to">Искать в период до</string>
    <string name="year_from">1998 – 2022</string>
    <string name="selectedMy">Выбрать</string>
    <string name="collections">Коллекции</string>
    <string name="name_collection">Name collection</string>
    <string name="next_fragment">Пропустить</string>
    <string name="signature1">Узнавай \nо премьерах</string>
    <string name="signature2">Создавай \nколлекции</string>
    <string name="signature3">Делись \nс друзьями</string>
    <string name="signature4"></string>
    <string name="error401">Запрос к удаленному ресурсу закончился не удачей, с кодом HTTP 401: Пустой или неправильный токен</string>
    <string name="error402">Запрос к удаленному ресурсу закончился не удачей, с кодом HTTP 402: Превышен лимит запросов(или дневной, или общий)</string>
    <string name="error429">Запрос к удаленному ресурсу закончился не удачей, с кодом HTTP 429: Слишком много запросов. Общий лимит - 20 запросов в секунду</string>
    <string name="errorUser">Ошибка операции.</string>

</resources>