<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="@dimen/poster_image_height"
        android:scaleType="fitCenter"
        android:contentDescription="@string/poster_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/background_card"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/logotype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/poster_logo_bottom"
        app:layout_constraintBottom_toTopOf="@id/ratingName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/poster_show_logotype_film" />

    <TextView
        android:id="@+id/nameRuOrig"
        style="@style/textApp.poster_logo"
        android:hint="@string/nameru"
        android:layout_marginBottom="@dimen/poster_logo_bottom"
        app:layout_constraintBottom_toTopOf="@id/ratingName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/ratingName"
        style="@style/textApp.poster_text"
        android:hint="@string/poster_rating_name_ru_film"
        android:layout_marginBottom="@dimen/poster_yearGenreOther_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/yearGenreOther"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/yearGenreOther"
        style="@style/textApp.poster_text"
        android:layout_marginBottom="@dimen/poster_yearGenreOther_bottom"
        android:hint="@string/poster_yeargenreother"
        app:layout_constraintBottom_toTopOf="@id/iconList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/iconList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/poster_linear_icon_top"
        android:layout_marginBottom="@dimen/poster_linear_icon_bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/icon_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/poster_icon_end"
            android:contentDescription="@string/icon_favorite"
            android:src="@drawable/ic_baseline_favorite_border_24" />

        <ImageView
            android:id="@+id/ic_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/poster_icon_end"
            android:contentDescription="@string/icon_bookmark"
            android:src="@drawable/ic_baseline_bookmark_border_24" />

        <ImageView
            android:id="@+id/ic_viewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/poster_icon_end"
            android:contentDescription="@string/icon_viewed"
            android:src="@drawable/ic_baseline_visibility_off_24" />

        <ImageView
            android:id="@+id/ic_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/poster_icon_end"
            android:contentDescription="@string/icon_share"
            android:src="@drawable/ic_baseline_share_24" />

        <ImageView
            android:id="@+id/ic_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_other" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>