<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:layout_marginHorizontal="@dimen/margin_app_hor">
    <TextView
        android:id="@+id/tv_viewing"
        style="@style/H5"
        android:paddingVertical="@dimen/settings_padding_ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/viewing"/>
    <LinearLayout
        android:id="@+id/pole_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/settings_padding_ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_viewing"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_all"
            android:background="@drawable/round_rect_shape_start"
            android:hint="@string/show_all"
            style="@style/settings_search_group_start"/>
        <TextView
            android:id="@+id/tv_film"
            android:background="@drawable/round_rect_shape_center"
            android:hint="@string/films"
            style="@style/settings_search_group_start"/>
        <TextView
            android:id="@+id/tv_serials"
            android:background="@drawable/round_rect_shape_end"
            android:hint="@string/serials"
            style="@style/settings_search_group_start"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_country"
        style="@style/H3_search_settings_text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pole_search"
        android:text="@string/country"/>
    <TextView
        android:id="@+id/tv_country_enter"
        style="@style/H4_search_settings_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_country"
        app:layout_constraintBottom_toBottomOf="@id/tv_country"
        android:text="@string/country"/>
    <View
        style="@style/divider"
        app:layout_constraintTop_toBottomOf="@id/tv_country"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/tv_genre"
        style="@style/H3_search_settings_text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_country"
        android:text="@string/genre"/>
    <TextView
        android:id="@+id/tv_genre_enter"
        style="@style/H4_search_settings_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_genre"
        app:layout_constraintBottom_toBottomOf="@id/tv_genre"
        android:text="@string/genre"/>
    <View
        style="@style/divider"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_year"
        style="@style/H3_search_settings_text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        android:text="@string/year"/>
    <TextView
        android:id="@+id/tv_year_enter"
        style="@style/H4_search_settings_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_year"
        app:layout_constraintBottom_toBottomOf="@id/tv_year"
        android:text="@string/year"/>
    <View
        style="@style/divider"
        app:layout_constraintTop_toBottomOf="@+id/tv_year"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_rating"
        style="@style/H3_search_settings_text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_year"
        android:text="@string/rating"/>
    <TextView
        android:id="@+id/tv_rating_enter"
        style="@style/H4_search_settings_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_rating"
        app:layout_constraintBottom_toBottomOf="@id/tv_rating"
        android:text="@string/rating"/>
    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="1.0"
        android:valueTo="10.0"
        android:stepSize="0.1"
        app:values="@array/initial_range_slider_values"
        app:layout_constraintTop_toBottomOf="@id/tv_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_slider_from"
        style="@style/H4_search_settings_text2"
        android:layout_marginStart="@dimen/settings_margin_start"
        android:paddingBottom="@dimen/settings_padding_ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/range_slider"
        android:text="@string/_1"/>
    <TextView
        android:id="@+id/tv_slider_to"
        style="@style/H4_search_settings_text2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/settings_margin_end1"
        app:layout_constraintTop_toBottomOf="@id/range_slider"
        android:text="@string/_10"/>
    <View
        style="@style/divider"
        app:layout_constraintTop_toBottomOf="@+id/tv_slider_from"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_sorting"
        style="@style/H5"
        android:paddingVertical="@dimen/settings_padding_ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_slider_from"
        android:text="@string/sorting"/>

    <LinearLayout
        android:id="@+id/pole_sorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/settings_padding_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sorting"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_data"
            android:background="@drawable/round_rect_shape_start"
            android:hint="@string/date"
            style="@style/settings_search_group_start"/>
        <TextView
            android:id="@+id/tv_popular"
            android:background="@drawable/round_rect_shape_center"
            android:hint="@string/popularis"
            style="@style/settings_search_group_start"/>
        <TextView
            android:id="@+id/tv_"
            android:background="@drawable/round_rect_shape_end"
            android:hint="@string/rating"
            style="@style/settings_search_group_start"/>
    </LinearLayout>
    <View
        style="@style/divider"
        app:layout_constraintTop_toBottomOf="@+id/pole_sorting"
        app:layout_constraintStart_toStartOf="parent"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_show_viewed"
        android:switchPadding="@dimen/settings_padding_ver1"
        app:layout_constraintTop_toBottomOf="@id/pole_sorting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_button"
        style = "@style/dialog_tv"
        android:text="@string/selected"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>