<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewmodel"
            type="com.example.movie_catalog.ui.film_page.FilmPageViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/poster_image_height"
            android:background="@drawable/gradient_list"
            android:contentDescription="@string/poster_small"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logotype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/poster_logo_bottom"
            android:contentDescription="@string/poster_show_logotype_film"
            app:layout_constraintBottom_toBottomOf="@id/poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/iconList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/poster_linear_icon_bottom"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster">

            <ImageView
                android:id="@+id/iv_favorite"
                style="@style/film_page_icon"
                android:contentDescription="@string/icon_favorite"
                android:src="@{viewmodel.favorite ? @drawable/icon_favorite_selected : @drawable/icon_favorite}"
                />

            <ImageView
                android:id="@+id/iv_bookmark"
                style="@style/film_page_icon"
                android:contentDescription="@string/icon_bookmark"
                android:src="@{viewmodel.bookmark ? @drawable/icon_bookmark_selected : @drawable/icon_bookmark}"
                />

            <ImageView
                android:id="@+id/iv_viewed"
                style="@style/film_page_icon"
                android:contentDescription="@string/icon_viewed"
                android:src="@{viewmodel.viewed ? @drawable/icon_viewed : @drawable/icon_unviewed}" />

            <ImageView
                android:id="@+id/iv_share"
                style="@style/film_page_icon"
                android:contentDescription="@string/icon_share"
                android:src="@drawable/icon_share" />

            <ImageView
                android:id="@+id/iv_other"
                style="@style/film_page_icon"
                android:contentDescription="@string/icon_other"
                android:src="@drawable/icon_extend" />
        </LinearLayout>

        <TextView
            android:id="@+id/nameRuOrig"
            style="@style/H0_poster"
            android:layout_marginBottom="@dimen/poster_logo_bottom"
            android:hint="@string/nameru"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconList" />

        <TextView
            android:id="@+id/ratingName"
            style="@style/H5_poster"
            android:layout_marginTop="@dimen/poster_yearGenreOther_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameRuOrig" />

        <TextView
            android:id="@+id/yearGenreOther"
            style="@style/H5_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>