<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/card_people_total_width"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_people_name_marTop">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="@dimen/card_people_width"
        android:layout_height="@dimen/card_people_height"
        android:contentDescription="@string/card_starred_photo"
        android:background="@drawable/gradient_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_actor"
        style="@style/H4_"
        android:layout_width="@dimen/card_people_actor_width"
        android:hint="@string/card_starred_actor"
        app:layout_constraintStart_toEndOf="@id/photo"
        app:layout_constraintTop_toTopOf="@id/photo"
        app:layout_constraintBottom_toTopOf="@id/tv_role"/>

    <TextView
        android:id="@+id/tv_role"
        style="@style/H5_home"
        android:hint="@string/card_starred_role"
        app:layout_constraintTop_toBottomOf="@id/tv_actor"
        app:layout_constraintStart_toStartOf="@id/tv_actor"
        app:layout_constraintBottom_toBottomOf="@id/photo" />

</androidx.constraintlayout.widget.ConstraintLayout>